config: 改为本地配置形式，避免敏感信息上传 GitHub
- config/default.yaml: 移除真实密钥/密码，改为安全占位默认值
  - JWT secret 改为 please-change-me，邮件默认关闭且账号密码为空
  - 增加注释说明真实配置使用本地 config.yaml 或环境变量
- .gitignore: 忽略本地配置文件 config.yaml、config/local.yaml、.env 等

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 .history
 .idea
 finance-linux-amd64
+
+# local config (do not commit)
+config.yaml
+config/config.yaml
+config/local.yaml
+config/*.local.yaml
+.env
+.env.*
